# NOT_YET_website_portfolio

./: .githooks.ini  .gitignore  lint_staged.sh  pyproject.toml  troll.py
src/portfolio/: settings.py  urls.py
