[tool.poetry]
name = "django_website"
version = "0.1.0"
description = ""
authors = ["genndy007 <kochevgenazp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.961"
flake8 = "^4.0.1"
python-githooks = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
